Changelog
=========

0.4.1 (Unreleased)
------------------

* downgraded to debug level the print of token URL message (when used) [keul]

0.4.0 (2012-01-11)
------------------

* fixed typo in translations [keul]
* added a soft dependency on `auslfe.formonline.tokenaccess`__ [keul]

__ http://pypi.python.org/pypi/auslfe.formonline.tokenaccess

0.3.0 (2011-12-13)
------------------

First pubic release

* added support for "Site Administrator" role
  (this **not** mean that we tested this on Plone 4.1) yet [keul]
* removed CMF skins directory (having it only for customize the ``getNotAddableTypes``
  script was not a good idea [keul]
* splitted the GS profile in two, a default core ones and another ones for register also
  the Page-like content. In this way a use could *not* use the FormOnline content [keul]
* FormOnline content set as not searchable and not shown in navigation [keul]
* removed the useless FormOnline view, transforming it to a viewlet registered for all
  content types marked as ``IFormOnline`` [keul]

0.2.0 (2011-05-06)
------------------

* enabled versioning [keul]
* changes to the content workflow [keul]
* i18n fixes [keul]
* some workflow changes [keul]
* FormOnline content has its own view [keul]
* added warning messages to the FormOnline view [keul]

0.1.0 (2010-07-19)
------------------

* Initial release [fdelia]